--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An api for fans of Chickens",
   "main": "index.js",
   "scripts": {
-    "jsdoc":"jsdoc",
+    "jsdoc": "jsdoc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongoose": "^5.12.2",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   },
