add npm start script and change app listening port to process.env.PORT || 8080

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An api for fans of Chickens",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "jsdoc": "jsdoc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
